[package]
name = "my_gui_v0_0_1"
version = "0.0.1"
edition = "2021"
authors = ["Abdo Mahmoud - Unique Digital Resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = "0.68.0"
winit = "0.28.7"
softbuffer = "0.3.0"
rand = "0.8"

# Example section
[[example]]
name = "simple_window"
path = "src/examples/simple_window.rs"
